[tool.poetry]
name = "gsl"
version = "0.1.0"
description = ""
authors = ["Ichiho Oya <icchitokyo@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.22.1"
tensorboard = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
